# welder-rp2040

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
CAD/: BOM_PCB_RP_Xerxes_2023-03-06.csv
CAD/BOM/: BOM_PCB_RP_Xerxes_2023-03-06.csv  BOM_PCB_accelerometer_adapter_2023-03-11.csv  BOM_PCB_pollution_adapter_2023-03-11.csv  BOM_PCB_xerxes_4AI_screw_2023-03-07.csv
CAD/PickAndPlace/: PickAndPlace_PCB_RP_Xerxes_2023-03-06.csv  PickAndPlace_PCB_accelerometer_adapter_2023-03-11.csv  PickAndPlace_PCB_pollution_adapter_2023-03-11.csv  PickAndPlace_PCB_xerxes_4AI_screw_2023-03-07.csv
docs/: 4DI4DO_8cpp.html  4DI4DO_8cpp__incl.map  4DI4DO_8cpp__incl.md5  4DI4DO_8hpp.html  4DI4DO_8hpp__dep__incl.map  4DI4DO_8hpp__dep__incl.md5  4DI4DO_8hpp__incl.map  4DI4DO_8hpp__incl.md5  4DI4DO_8hpp_source.html  ABP_8cpp.html  ABP_8cpp__incl.map  ABP_8cpp__incl.md5  ABP_8hpp.html  ABP_8hpp__dep__incl.map  ABP_8hpp__dep__incl.md5  ABP_8hpp__incl.map  ABP_8hpp__incl.md5  ABP_8hpp_source.html  Actions_8hpp.html  Actions_8hpp__dep__incl.map  Actions_8hpp__dep__incl.md5  Actions_8hpp__incl.map  Actions_8hpp__incl.md5  Actions_8hpp_source.html  AnalogInput_8cpp.html  AnalogInput_8cpp__incl.map  AnalogInput_8cpp__incl.md5  AnalogInput_8hpp.html  AnalogInput_8hpp__dep__incl.map  AnalogInput_8hpp__dep__incl.md5  AnalogInput_8hpp__incl.map  AnalogInput_8hpp__incl.md5  AnalogInput_8hpp_source.html  BindWrapper_8hpp.html  BindWrapper_8hpp__dep__incl.map  BindWrapper_8hpp__dep__incl.md5  BindWrapper_8hpp__incl.map  BindWrapper_8hpp__incl.md5  BindWrapper_8hpp_source.html  CMakeCCompilerId_8c.html  (+862 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  (+115 more)
include/: Actions.hpp  BindWrapper.hpp  Callbacks.hpp  ClockUtils.h  ClockUtils.hpp  Definitions.h  DeviceIds.h  DirectionControl.hpp  Errors.h  InitUtils.h  InitUtils.hpp  Memory.h  Memory.hpp  Message.hpp  MessageId.h  Network.hpp  Packet.hpp  Protocol.hpp  RS485.hpp  RingBuffer.hpp  Sensor.hpp  Slave.hpp  Sleep.h  Sleep.hpp  StatisticBuffer.hpp  UserFlash.hpp  king.h  xerxes_rp2040.h
include/Buffer/: RingBuffer.hpp
include/Honeywell/: ABP.hpp
include/Sensors/: Sensor.hpp  all.hpp
include/Sensors/Generic/: AnalogInput.hpp
include/Sensors/Honeywell/: ABP.hpp
include/Sensors/Murata/: SCL3300.hpp  SCL3400.hpp  SCL3X00.hpp  SCL3x00.hpp
src/: Callbacks.cpp  ClockUtils.cpp  InitUtils.cpp  Message.cpp  Network.cpp  Packet.cpp  Slave.cpp  Sleep.cpp  UserFlash.cpp  balast.c  main.cpp
src/Buffer/: RingBuffer.hpp  StatisticBuffer.hpp
src/Communication/: Callbacks.cpp  Callbacks.hpp  Message.hpp  MessageId.h  Network.hpp  Packet.hpp  Protocol.cpp  Protocol.hpp  RS485.cpp  RS485.hpp
src/Core/: BindWrapper.hpp  Definitions.h  DeviceIds.h  Errors.h  Register.cpp  Register.hpp  Slave.cpp  Slave.hpp
src/Hardware/: ClockUtils.cpp  ClockUtils.hpp  InitUtils.cpp  InitUtils.hpp  Memory.h  Sleep.cpp  UserFlash.cpp  UserFlash.hpp  xerxes_rp2040.h
src/Hardware/Board/: xerxes_rp2040.h
src/Sensors/: Peripheral.cpp  Peripheral.hpp  Sensor.cpp  Sensor.hpp  all.hpp
src/Sensors/Generic/: 4DI4DO.cpp  4DI4DO.hpp  AnalogInput.cpp  AnalogInput.hpp  Cutter.cpp  Cutter.hpp  DigitalInputOutput.cpp  DigitalInputOutput.hpp  DiscreteAnalog.cpp  DiscreteAnalog.hpp  Encoder.cpp  Encoder.hpp  hx711.cpp  hx711.hpp
src/Sensors/Generic/DIO/: 4DI4DO.cpp  4DI4DO.hpp  Cutter.cpp  Cutter.hpp  DigitalInputOutput.cpp  DigitalInputOutput.hpp  Encoder.cpp  Encoder.hpp  Tier.cpp  Tier.hpp  Welder.cpp  Welder.hpp
src/Sensors/Generic/Enviro/: LightSound.cpp  LightSound.hpp
src/Sensors/Generic/Welder/: Welder.cpp  Welder.hpp
src/Sensors/Generic/ds18b20/: ds18b20.cpp  ds18b20.h  ds18b20.hpp  onewire.h
src/Sensors/Honeywell/: ABP.cpp  ABP.hpp
src/Sensors/Murata/: SCL3300.cpp  SCL3300.hpp  SCL3300a.cpp  SCL3300a.hpp  SCL3400.cpp  SCL3400.hpp  SCL3X00.cpp  SCL3X00.hpp
src/Sensors/ST/: LIS2.cpp  LIS2.hpp  notes.md
src/Sensors/Sensirion/: Sen55.cpp  Sen55.hpp
src/Utils/: Log.cpp  Log.h  Log.hpp
test/: CMakeLists.txt  testMessage.cpp  testRingBuffer.cpp
tests/: read_distance_means.py  read_means.py
tests/gtest/: testMessage.cpp
tests/pytest/: conftest.py  pytest.ini
tests/pytest/AnalogInputTests/: test_values.py
tests/pytest/CommonLeafTests/: test_address.py  test_basics.py  test_config_reg.py  test_mem_rw.py  test_read_vals.py  test_reset.py  test_resilience.py  test_sensor_overload.py  test_sleep.py  test_stress.py  test_sync.py
utils/: dio_manual_test.py  read_cutter.py  read_welder.py  test_and_log_jira.py  tier_test.py
